correct alignment with multiple images

--- a/TV_Wigym/wwwroot/css/prod.css
+++ b/TV_Wigym/wwwroot/css/prod.css
@@ -43,6 +43,7 @@ body{ font-family: 'Open Sans', sans-serif; }
     /*top: 50%;
     transform: translate(-50%, -50%);*/
     width: 100%;
+    height: 100%;
 }
 
 .main .top, .main .bottom {
